--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,13 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  http: ^1.2.2
+  logger: ^2.5.0
+  intl: ^0.20.1
+  url_launcher: ^6.3.1
+  get: ^4.6.6
+  get_storage: ^2.1.1
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
