--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.8
   http: ^1.2.2
   logger: ^2.5.0
@@ -19,6 +18,7 @@ dependencies:
   get: ^4.6.6
   get_storage: ^2.1.1
   iconsax: ^0.0.8
+  flutter_native_splash: ^2.4.4
 
 dev_dependencies:
   flutter_test:
@@ -27,25 +27,29 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-  # Including assets like images and fonts directory
   assets:
     - assets/images/
     - assets/logos/
     - assets/icons/brands/
+  # fonts:
+  #   - family: Roboto
+  #     fonts:
+  #       - asset: assets/fonts/Roboto-Regular.ttf
+  #       - asset: assets/fonts/Roboto-Bold.ttf
+  #         weight: 700
+  #       - asset: assets/fonts/Roboto-Italic.ttf
+  #         style: italic
+  #   - family: OpenSans
+  #     fonts:
+  #       - asset: assets/fonts/OpenSans-Regular.ttf
+  #       - asset: assets/fonts/OpenSans-Bold.ttf
+  #         weight: 700
 
-
-  # Defining fonts explicitly for usage in the app
-  fonts:
-    - family: Roboto
-      fonts:
-        - asset: assets/fonts/Roboto-Regular.ttf
-        - asset: assets/fonts/Roboto-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/Roboto-Italic.ttf
-          style: italic
-    - family: OpenSans
-      fonts:
-        - asset: assets/fonts/OpenSans-Regular.ttf
-        - asset: assets/fonts/OpenSans-Bold.ttf
-          weight: 700
+flutter_native_splash:
+  color: "#272727" # Light mode background color
+  color_dark: "#272727" # Dark mode background color
+  image: assets/logos/logo_dark.png # Light mode logo
+  image_dark: assets/logos/logo_dark.png # Dark mode logo
+  android: true # Enable splash screen for Android
+  ios: true # Enable splash screen for iOS
+  web: false # Disable splash screen for web
